--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>org.example</groupId>
 	<artifactId>spring-boot-transaction</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<name>Spring Boot Transactions</name>
 	<description>Multiple transaction managers with Spring Boot.</description>
